file( GLOB Tests "${CMAKE_CURRENT_LIST_DIR}/*Test.cpp" )
foreach( Test ${Tests} )
  get_filename_component( TestName "${Test}" NAME_WE )
  add_executable( ${TestName} ${Test} )
  target_link_libraries( ${TestName} PRIVATE FCurveEditor )
endforeach()
target_link_libraries( FCurveEditorTest PRIVATE AnimXFCurveModel )
target_link_libraries( RTValFCurveEditorTest PRIVATE RTValAnimXFCurveModel )
